Fix stretched thumbnails
Thumbnails for a selected image in the results modal were set to
fill the height of the div. So added a `max-height` and
`vertical-align`.

Fixes hotosm/OpenAerialMap#79

--- a/app/assets/styles/_results-panel.scss
+++ b/app/assets/styles/_results-panel.scss
@@ -193,11 +193,11 @@
     position: relative;
     z-index: 2;
     max-width: 100%;
-    height: 100%;
+    max-height: 100%;
     display: inline-block;
     box-shadow: 0 2px 12px 2px rgba($base-color, 0.24);
     border-radius: $base-border-radius / 2;
-    vertical-align: top;
+    vertical-align: middle;
   }
   .blur-media {
     position: absolute;
